--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-
-}
-
 html  {
   color: white;
   background-color: #17174a;
@@ -22,16 +15,12 @@ html  {
       radial-gradient(100% 100% at 0 100%,#0000, #0008 4%,var(--_g),var(--c1) 96%)
       var(--c1);
     background-size: var(--s) var(--s);
- 
-  
-
 }
 
 body {
-  color: white;
-  
-  font-family: lato,sans-serif;
-  
+  margin: 0;
+  padding: 0;
+  font-family: 'Arial', sans-serif;
 }
 
 h1 {
@@ -49,25 +38,37 @@ h1 {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-
+ min-height: 100vh;
 }
+
 
 
 
 /* lista de tareas */ 
 
 .tareas-lista-principal {
-   width: 600px;
+  
    min-height: 500px;
-   padding: 25px;
+  
    margin: 10px;
    justify-content: center;
    background: rgba(255,255,255,0.3);
    box-shadow: 20px 20px 40px -6px rgba(0,0,0,0.2);
    backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
-   border-radius: 10px;
+  padding: 20px;
+  border-radius: 8px;
+  max-width: 600px;
+  width: 100%;
   
 }
+@media (max-width: 768px) {
+  .tareas-lista-principal {
+    padding: 10px;
+  }
 
+  h1 {
+    font-size: 1.5em;
+  }
+}
 
